--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<li><a href="javascript:;" class="theme-login">登陆</a></li>
 						<li><a href="javascript:;" class="theme-login1">注册</a></li>
 						<li><a href="#" style="display:none">个人中心</a></li>
-						<li><a href="#about">关于我们</a></li>
+						<li><a href="about.html">关于我们</a></li>
 						<li><p style="display:none">欢迎，XXX</p></li>
 					</div>
 					</nav>
