--- a/about.html
+++ b/about.html
@@ -63,10 +63,10 @@
 					<div>
 						<li><img src="images/TipTrip-logo.png" class="img-responsive"></li>
 						<li><a href="index.html">主页</a></li>
-						<li><a href="javascript:;" class="theme-login">登陆</a></li>
-						<li><a class="scroll" href="#">注册</a></li>
+						<li><a href="javascript:;" class="theme-login">登录</a></li>
+						<li><a href="javascript:;" class="theme-login1">注册</a></li>
 						<li><a href="#" style="display:none">个人中心</a></li>
-						<li><a href="#about">关于我们</a></li>
+						<li><a href="about.html">关于我们</a></li>
 						<li><p style="display:none">欢迎，XXX</p></li>
 					</div>
 					</nav>
@@ -131,7 +131,7 @@
 	<div class="theme-popover1">
      <div class="theme-poptit1">
           <a href="javascript:;" title="关闭" class="close">×</a>
-          <h3>登录</h3>
+          <h3>注册</h3>
      </div>
      <div class="theme-popbod dform">
            <form class="form-horizontal" role="form" name="loginform" action="" method="post">
@@ -187,7 +187,7 @@
 						<header>
 							<h3>平台简介</h3>
 						</header>
-						<h5 style="text-indent: 2em"><strong>Tip &amp; Trip</strong>是专业的高校信息交流平台，立足于高考生对上海高校信息的需求，旨在为大学生和高考生提供服务，是高考生和大学生间自由交流的一座桥梁。无论是考生、考生家长还是大学生，经注册后都可享受我们的服务。本平台专业提供上海高校信息，包括官方信息（办学规模、优势专业、历年录取分数）与非官方信息（高校内部消息与大学学习生活经验），通过搜集、整理与分析，将最<span class="label label-default">全面</span>、<span class="label label-default">真实</span>、<span class="label label-default">有效</span>的高校信息提供给用户。</h5>
+						<h5 style="text-indent: 2em"><strong>Tip &amp; Trip</strong>是专业的高校信息交流平台，立足于高考生对上海高校信息的需求，旨在为大学生和高考生提供服务，是高考生和大学生间自由交流的一座桥梁。无论是考生、考生家长还是大学生，经注册后都可享受我们的服务。本平台专业提供上海高校信息，包括官方信息（办学规模、优势专业、历年录取分数）与非官方信息（高校内部消息与大学学习生活经验），通过搜集、整理与分析，将最&nbsp<span class="label label-default">全面</span>、<span class="label label-default">真实</span>、<span class="label label-default">有效</span>&nbsp的高校信息提供给用户。</h5>
 					</div>
 					<div class="abt_img1"><img src="images/w1.jpg" alt=""></div>
 					<div class="abt_img2"><img src="images/w2.jpg" alt=""></div>
@@ -267,75 +267,72 @@
 		<header>
 							<h3>平台团队</h3>
 						</header>
-		<section class="main">
-			
-				<ul class="ch-grid">
-					<li>
-						<div class="ch-item ch-img-1">
-							<div class="ch-info">
-								<h4>Use what you have</h4>
-								<p>by Angela Duncan <a href="#">View on Dribbble</a></p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="ch-item ch-img-2">
-							<div class="ch-info">
-								<h4>Common Causes of Stains</h4>
-								<p>by Antonio F. Mondragon <a href="#">View on Dribbble</a></p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="ch-item ch-img-3">
-							<div class="ch-info">
-								<h4>Pink Lightning</h4>
-								<p>by Charlie Wagers <a href="#">View on Dribbble</a></p>
-							</div>
-						</div>
-					</li>
-				</ul>
-				
-			</section>
+		<div class="container">
+			<div class="teamcon">
+			<div class="row">
+				<div class="col-md-12 teamtit">
+				<h4 style="float:left;color:white">在校大学生</h4>
+				</div>
+				<div class="col-md-4">
+					<img src="images/t1.jpg" alt="大学生"></img>
+				</div>
+				<div class="col-md-8">
+					<br/><p>他们来自上海各个高校、各个学院和专业，经过一年或者几年的大学生活他们不但掌握官方信息，也同时拥有大学学习生活的经验与学校的内部消息，而且因为本身经历过高考不久，更能理解高中生和家长迷茫与疑惑，拥有更多的话语权。</p>	
+				</div>
+				</div>
 			</div>
+			<div class="teamcon">
+				<div class="row">
+				<div class="col-md-12 teamtit">
+				<h4 style="float:left;color:white">特聘专家</h4>
+				</div>
+				<div class="col-md-4">
+					<img src="images/t2.jpg" alt="专家"></img>
+				</div>
+				<div class="col-md-8">
+					<br/><p>他们中有的是高校教职工，有的是志愿填报咨询师、职业规划师，还有的是心理咨询师。但是相同的是，他们都从事学生工作多年，拥有丰富的工作经历和资深的经验，不但了解学生困惑，也能给予更专业的解答。</p>
+				</div>
+				</div>
+			</div>
+		</div>
+		</div>
     </div>
  </div>
 	<!-- content-section-ends -->
+	<a name="contactus"></a>
 	<div class="get-in-touch">
 			<div class="container">
-				<div class="col-md-3 gin">
-					<h3>Get in Touch</h3>
-					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspeisse eget diam</p>
-					<div class="social-icons footer-icons">
-						<i class="facebook"></i>
-						<i class="twitter"></i>
-						<i class="googlepluse"></i>
-					</div>
+				<div class="col-md-1 gin">
 				</div>
-				<div class="col-md-3 address">
-					<h3>Address</h3>
+				<div class="col-md-4 address">
+					<h3>地址</h3>
 					<address>
-						<p>10-765 mg-Road,
-						<p>Washington, DC, United States,</p>
-						<p>ud-19832-6578.</p>
+						<p>上海市 长宁区
+						<p>延安西路1882号</p>
+						<p>东华大学</p>
 						<p class="phone"><span>Phone</span> :+1 900 876 1234</p>
 						<span class="phone">E-mail : <a href="mail-to:example@mail.com">example@mail.com</a></span>
 					</address>
 				</div>
-				<div class="col-md-6 dal">
-					<h3>Drop us a line</h3>
-					<input type="text" class="text" value="First Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'First Name';}">
-					<input type="text" class="text" value="Last Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last Name';}">
-					<input type="text" class="text" value="E-mail" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-mail';}">
-					<input type="text" class="text" value="Phone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}">
-					<textarea onfocus="if(this.value == 'Your Message') this.value='';" onblur="if(this.value == '') this.value='Your Message';" >Your Message</textarea>
-					<input type="submit" value="SEND">
+				<div class="col-md-7 dal">
+					<h3>联系我们</h3>
+					<form role="form">
+					<div class="form-group">
+					<input type="text" class="text" value="您的姓名" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '您的姓名';}">
+					</div>
+					<div class="form-group">
+					<input type="text" class="text" value="邮箱地址" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '邮箱地址';}">
+					</div>
+					<div class="form-group">
+					<textarea onfocus="if(this.value == '您对我们的想法') this.value='';" onblur="if(this.value == '') this.value='您对我们的想法';" >您对我们的想法</textarea>
+					</div>
+					<input type="submit" value="发送">
 				</div>
 				<div class="clearfix"></div>
 			</div>
 		</div>
 	<!-- footer-section -->
-	<div class="get-in-touch">
+	<div class="get-in-touch" style="background-color:#2B2B2B">
 			<div class="container">
 				<div class="col-md-3 gin">
 					<h3>这是LOGO</h3>
