--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gallery</title>
+<title>精品大学游</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <!-- Custom Theme files -->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Gardening Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="TipTrip,高考,大学,咨询,上海,教育" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--webfont-->
 <link href='http://fonts.useso.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
@@ -25,34 +25,60 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					event.preventDefault();
 					$('html,body').animate({scrollTop:$(this.hash).offset().top},900);
 				});
+				$('.theme-login').click(function(){
+					$('.theme-popover-mask').fadeIn(100);
+					$('.theme-popover').slideDown(200);
+				});
+				$('.theme-poptit .close').click(function(){
+					$('.theme-popover-mask').fadeOut(100);
+					$('.theme-popover').slideUp(200);
+				});
+				$('.theme-login1').click(function(){
+					$('.theme-popover-mask').fadeIn(100);
+					$('.theme-popover1').slideDown(200);
+				});
+				$('.theme-poptit1 .close').click(function(){
+					$('.theme-popover-mask').fadeOut(100);
+					$('.theme-popover1').slideUp(200);
+				});
 			});
+			function scrollt(id)
+				{
+					var cc=document.getElementById(id);
+					cc.scrollIntoView();
+				}
+</script>
 </script>
 </head>
 <body>
 	<!-- header-section-starts -->
 	<div class="about-header-banner">
-		<div class="container">
-			<div class="home">
-					<a href="index.html"><span class="glyphicon glyphicon-home"></span></a>
-			</div>
+		<div class="container">			
 			<div class="header-top">
-				<div class="social-icons">
-					<i class="facebook"></i>
-					<i class="twitter"></i>
-					<i class="googlepluse"></i>
-				</div>
 				<span class="menu"><img src="images/nav.png" alt=""/></span>
 				<div class="top-menu">
 					<ul>
 					<nav class="cl-effect-13">
-						<li><a href="about.html">About</a></li>
-						<li><a class="active" href="">Gallery</a></li>
-						<li><a href="index.html">News</a></li>
-						<li><a href="typography.html">Typo</a></li>
-						<li><a href="contact.html">Contact</a></li>
+					<div>
+						<li><img src="images/TipTrip-logo.png" class="img-responsive"></li>
+						<li><a href="index.html">主页</a></li>
+						<li><a href="javascript:;" class="theme-login">登录</a></li>
+						<li><a class="scroll" href="#">注册</a></li>
+						<li><a href="#" style="display:none">个人中心</a></li>
+						<li><a href="about.html">关于我们</a></li>
+						<li><p style="display:none">欢迎，XXX</p></li>
+					</div>
 					</nav>
 					</ul>
 				</div>
+			<div class="clearfix"></div>
+			</div>
+			<div class="clearfix"></div>
+			<div class="banner-info text-center">
+				<h1><a href="index.html">Tip &amp; Trip</a></h1>
+			</div>				
+		</div>
+	</div>		
 				<!-- script for menu -->
 					<script> 
 						$( "span.menu" ).click(function() {
@@ -62,20 +88,90 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						});
 					</script>
 				<!-- //script for menu -->
-				<div class="clearfix"></div>
-			</div>
-			<div class="clearfix"></div>
-			<div class="banner-info text-center">
-				<h1><a href="index.html">Gardening</a></h1>
-			</div>
-		</div>
-	</div>
+	<!-- header-section-ends -->
+	<!--signin-->
+	<div class="theme-popover">
+     <div class="theme-poptit">
+          <a href="javascript:;" title="关闭" class="close">×</a>
+          <h3>登录</h3>
+     </div>
+     <div class="theme-popbod dform">
+           <form class="form-horizontal" role="form" name="loginform" action="" method="post">
+                <div class="form-group">
+					<label for="user" class="col-sm-3 control-label">用户名</label>
+					<div class="col-sm-9">
+						<input id="user" type="text" class="form-control" placeholder="请输入用户名" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="pass" class="col-sm-3 control-label">密码</label>
+					<div class="col-sm-9">
+						<input id="pass" type="password" class="form-control" placeholder="请输入密码" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<input id="check" type="checkbox" class="check" checked>
+					<label for="check"><span class="icon"></span> 保持我的状态</label>
+				</div>
+				<div class="form-group">
+					<div>
+						<button type="submit" class="btn btn-default">登录</button>
+					</div>
+				</div>
+           </form>
+		   <hr style=" height:2px;border:none;border-top:2px solid #185598;">
+				<div>
+					<a href="#">忘记密码?</a>
+				</div>
+     </div>
+	 </div>
+	<!--signin-ends-->
+	<!--signup-start-->
+	<div class="theme-popover1">
+     <div class="theme-poptit1">
+          <a href="javascript:;" title="关闭" class="close">×</a>
+          <h3>注册</h3>
+     </div>
+     <div class="theme-popbod dform">
+           <form class="form-horizontal" role="form" name="loginform" action="" method="post">
+                <div class="form-group">
+					<label for="user" class="col-sm-4 col-md-4 control-label">用户名</label>
+					<div class="col-sm-8 col-md-8">
+						<input id="user" type="text" class="form-control" placeholder="请输入用户名" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="pass" class="col-sm-4 col-md-4 control-label">密码</label>
+					<div class="col-sm-8 col-md-8">
+						<input id="pass" type="password" class="form-control" placeholder="请输入密码" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="pass" class="col-sm-4 col-md-4 control-label">重复密码</label>
+					<div class="col-sm-8 col-md-8">
+						<input id="pass" type="password" class="form-control" placeholder="请再次输入密码" required>
+					</div>
+				</div>
+				<div class="form-group">  
+					<label for="email" class="col-sm-4 col-md-4 control-label">邮箱</label>  
+					<div class="col-sm-8 col-md-8">  
+						<input name="email" type="text" placeholder="请输入邮箱" class="form-control" required pattern="^\w+((-\w+)|(\.\w+))*\@[A-Za-z0-9]+((\.|-)[A-Za-z0-9]+)*\.[A-Za-z0-9]+$" title="邮箱正确格式：Email@example.com">  
+					</div>  
+				</div>
+				<div class="form-group">
+					<div>
+						<button type="submit" class="btn btn-default">注册</button>
+					</div>
+				</div>
+           </form>
+     </div>
+	 </div>
 	<!-- header-section-ends -->
 	<!-- content-section-starts -->
     <div class="content">
    	<div class="container">
 	<div class="gallery-head" id="portfolio">
-	<h3>gallery</h3>
+	<h3>往期精彩活动</h3>
 		 <div class="gallery-bottom">
 					<div class="col-md-4 gallery-left">
 						<a href="images/gl7.jpg">
@@ -125,66 +221,126 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="clearfix"></div>
 			</div>
 
-<script src="js/jquery.chocolat.js"></script>
-<link rel="stylesheet" href="css/chocolat.css" type="text/css"/>
- <!-- Javascript calls -->
-	<script type="text/javascript" charset="utf-8">
-		$(function() {
-		 $('#portfolio a').Chocolat({overlayColor:'#000',leftImg:'images/leftw.gif',rightImg:'images/rightw.gif',closeImg:'images/closew.gif'});
-	   });
-</script>
+	<script src="js/jquery.chocolat.js"></script>
+	<link rel="stylesheet" href="css/chocolat.css" type="text/css"/>
+	 <!-- Javascript calls -->
+		<script type="text/javascript" charset="utf-8">
+			$(function() {
+			 $('#portfolio a').Chocolat({overlayColor:'#000',leftImg:'images/leftw.gif',rightImg:'images/rightw.gif',closeImg:'images/closew.gif'});
+		   });
+		</script>
 	 </div>
 </div>	
-
+</div>
+	<div class="gallery-head" id="actbm">
+	<div class="container">
+		<h3>精彩活动报名</h3>
+		<div class="row">
+		<div class="col-md-2"></div>
+		<div class="col-md-8">
+		<table class="table table-striped">
+		   <caption>近期活动</caption>
+		   <thead>
+			  <tr>
+				 <th>时间</th>
+				 <th>地点</th>
+				 <th>导游</th>
+				 <th>费用</th>
+			  </tr>
+		   </thead>
+		   <tbody>
+			  <tr>
+				 <td>2016-6-1</td>
+				 <td>复旦大学</td>
+				 <td>小A</td>
+				 <td>998</td>
+			  </tr>
+			  <tr>
+				 <td>2016-6-2</td>
+				 <td>同济大学</td>
+				 <td>小B</td>
+				 <td>998</td>
+			  </tr>
+			  <tr>
+				 <td>2016-6-3</td>
+				 <td>东华大学</td>
+				 <td>小C</td>
+				 <td>998</td>
+			  </tr>
+		   </tbody>
+		</table>
+		<center><button class="btn btn-lg btn-default">我要报名</button></center>
+		</div>
+		</div>
+		
+	</div>
+	</div>
+	<div class="gallery-head">
+	<div class="container">
+	<h3>志愿征集</h3>
+	<div class="pshadow" style="width:70%;margin-left: auto; margin-right: auto;background-color:#EEEEEE">
+		<h4>你最想参观的学校是：</h4>
+		<div class="col-md-offset-2">
+		<div class="radio">
+		<label>
+		<input type="radio" name="optionsRadios" id="optionsRadios1" 
+         value="option1" checked> 东华大学
+   </label>
+	</div>
+	<div class="radio">
+	   <label>
+		  <input type="radio" name="optionsRadios" id="optionsRadios2" 
+			 value="option2">
+			 上海交通大学
+	   </label>
+	</div>
+	<div class="radio">
+	   <label>
+		  <input type="radio" name="optionsRadios" id="optionsRadios2" 
+			 value="option3">
+			 复旦大学
+	   </label>
+	</div>
+	<div class="radio">
+	   <label>
+		  <input type="radio" name="optionsRadios" id="optionsRadios2" 
+			 value="option4">
+			 同济大学
+	   </label>
+	</div>
+	<div class="radio">
+	   <label>
+		  <input type="radio" name="optionsRadios" id="optionsRadios2" 
+			 value="option5">
+			 华东师范大学
+	   </label>
+	</div>
+	</div>
+<center><button class="btn btn-default btn-lg">投票</button></center>
+	</div>
+	</div>
 	</div>
    		<div class="gallery-top">
    			<div class="gallery">
 		</div>
 		</div>
-   </div>
-</div>
+
 	<!-- content-section-ends -->
+	<!-- footer-section -->
 	<div class="get-in-touch">
 			<div class="container">
 				<div class="col-md-3 gin">
-					<h3>Get in Touch</h3>
-					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspeisse eget diam</p>
-					<div class="social-icons footer-icons">
-						<i class="facebook"></i>
-						<i class="twitter"></i>
-						<i class="googlepluse"></i>
-					</div>
+					<h3>这是LOGO</h3>
 				</div>
-				<div class="col-md-3 address">
-					<h3>Address</h3>
-					<address>
-						<p>10-765 mg-Road,
-						<p>Washington, DC, United States,</p>
-						<p>ud-19832-6578.</p>
-						<p class="phone"><span>Phone</span> :+1 900 876 1234</p>
-						<span class="phone">E-mail : <a href="mail-to:example@mail.com">example@mail.com</a></span>
-					</address>
+				<div class="col-md-6 address">
+					<h3>这是介绍。。。</h3>
 				</div>
-				<div class="col-md-6 dal">
-					<h3>Drop us a line</h3>
-					<input type="text" class="text" value="First Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'First Name';}">
-					<input type="text" class="text" value="Last Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last Name';}">
-					<input type="text" class="text" value="E-mail" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-mail';}">
-					<input type="text" class="text" value="Phone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}">
-					<textarea onfocus="if(this.value == 'Your Message') this.value='';" onblur="if(this.value == '') this.value='Your Message';" >Your Message</textarea>
-					<input type="submit" value="SEND">
+				<div class="col-md-3 dal">
+					<h3>这是二维码</h3>
 				</div>
 				<div class="clearfix"></div>
 			</div>
 		</div>
-	<!-- footer-section -->
-	<div class="footer">
-		<div class="container">
-			<div class="copyright text-center">
-				<p>Copyright &copy; 2015.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
-			</div>
-		</div>
-	</div>
 	<!-- footer-section -->
 	<script type="text/javascript">
 		$(document).ready(function() {
