--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <link href='http://fonts.useso.com/css?family=Niconne' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
+<!--textillate.js-->
+<link rel="stylesheet" href="css/normalize.css">
 <!--/script-->
 <script type="text/javascript">
 			jQuery(document).ready(function($) {
@@ -57,7 +59,7 @@
 					<div>
 						<li><img src="images/TipTrip-logo.png" class="img-responsive"></li>
 						<li><a class="scroll" href="index.html">主页</a></li>
-						<li><a href="javascript:;" class="theme-login">登陆</a></li>
+						<li><a href="javascript:;" class="theme-login">登录</a></li>
 						<li><a href="javascript:;" class="theme-login1">注册</a></li>
 						<li><a href="#" style="display:none">个人中心</a></li>
 						<li><a href="about.html">关于我们</a></li>
@@ -88,22 +90,70 @@
 			</div>
 			<div class="clearfix"></div>
 			<div class="banner-info text-center">
-				<h1><a href="index.html">Tip & Trip</a></h1>
+			<canvas class="canvas1"></canvas>
+			<div class="help" style="display:none">?</div> 
+
+			<div class="ui" style="display:none">
+			  <input class="ui-input" type="text" />
+			  <span class="ui-return">↵</span>
+			</div>
+
+<div class="overlay" style="display:none">
+  <div class="tabs">
+    <div class="tabs-labels"><span class="tabs-label">Commands</span><span class="tabs-label">Info</span><span class="tabs-label">Share</span></div>
+
+    <div class="tabs-panels">
+      <ul class="tabs-panel commands">
+        <li class="commands-item"><span class="commands-item-title">Text</span><span class="commands-item-info" data-demo="Hello :)">Type anything</span><span class="commands-item-action">Demo</span></li>
+        <li class="commands-item"><span class="commands-item-title">Countdown</span><span class="commands-item-info" data-demo="#countdown 10">#countdown<span class="commands-item-mode">number</span></span><span class="commands-item-action">Demo</span></li>
+        <li class="commands-item"><span class="commands-item-title">Time</span><span class="commands-item-info" data-demo="#time">#time</span><span class="commands-item-action">Demo</span></li>
+        <li class="commands-item"><span class="commands-item-title">Rectangle</span><span class="commands-item-info" data-demo="#rectangle 30x15">#rectangle<span class="commands-item-mode">width x height</span></span><span class="commands-item-action">Demo</span></li>
+        <li class="commands-item"><span class="commands-item-title">Circle</span><span class="commands-item-info" data-demo="#circle 25">#circle<span class="commands-item-mode">diameter</span></span><span class="commands-item-action">Demo</span></li>
+
+        <li class="commands-item commands-item--gap"><span class="commands-item-title">Animate</span><span class="commands-item-info" data-demo="The time is|#time|#countdown 3|#icon thumbs-up"><span class="commands-item-mode">command1</span>&nbsp;|<span class="commands-item-mode">command2</span></span><span class="commands-item-action">Demo</span></li>
+      </ul>
+
+      <div class="tabs-panel ui-details">
+        <div class="ui-details-content">
+          <h1>Shape Shifter</h1>
+          <p>
+            An experiment by <a href="//www.kennethcachia.com" target="_blank">Kenneth Cachia<a/>.<br/>
+            <a href="//fortawesome.github.io/Font-Awesome/#icons-new" target="_blank">Font Awesome</a> is being used to render all #icons.
+          </p>
+
+          <br/><p>Visit <a href="http://www.kennethcachia.com/shape-shifter/?a=#icon thumbs-up" target="_blank">Shape Shifter</a> to use icons.</p>
+        </div>
+      </div>
+
+      <div class="tabs-panel ui-share">
+        <div class="ui-share-content">
+          <h1>Sharing</h1>
+          <p>Simply add <em>?a=</em> to the current URL to share any static or animated text. Examples:</p>
+          <p>
+            <a href="http://www.kennethcachia.com/shape-shifter?a=Hello" target="_blank">www.kennethcachia.com/shape-shifter?a=Hello</a><br/>
+            <a href="http://www.kennethcachia.com/shape-shifter?a=Hello|#countdown 3" target="_blank">www.kennethcachia.com/shape-shifter?a=Hello|#countdown 3</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  <script src="js/index.js"></script>
 			</div>
 			<div class="header-bottom-grids text-center">
-				<div class="header-bottom-grid1">
+				<div class="header-bottom-grid1" onclick="window.location.href='#';return false">
 					<span class="glyphicon glyphicon-user"></span>					
 					<h4>信息大本<br/>营</h4>
 				</div>
-				<div class="header-bottom-grid2">
+				<div class="header-bottom-grid2" onclick="window.location.href='question.html';return false">
 					<span class="glyphicon glyphicon-hand-up"></span>
 					<h4>答疑解惑<br/>区</h4>
 				</div>
-				<div class="header-bottom-grid3">
+				<div class="header-bottom-grid3" onclick="window.location.href='live.html';return false">
 					<span class="glyphicon glyphicon-screenshot"></span>
 					<h4>高校直播<br/>间</h4>
 				</div>
-				<div class="header-bottom-grid4">
+				<div class="header-bottom-grid4" onclick="window.location.href='gallery.html';return false">
 					<span class="glyphicon glyphicon-flag"></span>
 					<h4>精品大学<br/>游</h4>
 				</div>
@@ -153,7 +203,7 @@
 	<div class="theme-popover1">
      <div class="theme-poptit1">
           <a href="javascript:;" title="关闭" class="close">×</a>
-          <h3>登录</h3>
+          <h3>注册</h3>
      </div>
      <div class="theme-popbod dform">
            <form class="form-horizontal" role="form" name="loginform" action="" method="post">
@@ -195,31 +245,31 @@
 		<div class="container">
 			<div class="text-center">
 				<div class="secvice-top-grid-1">
-					<h3>Mirum est notare</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+				<h3>News</h3>
+					<p>在这里我们的咨询员与官方平台将发布最新、最热的上海高校信息。同时，你也可以在这里与我们进行互动、交流。总之，丰富的信息、活动和奖励在这里等着你，不要错过哦。</p>
 					<div class="icon1">
 						<a href="#"><i class="icon1"></i></a>
 					</div>
 				</div>
 				<div class="secvice-top-grid-2">
-					<h3>Mirum est notare</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+				<h3>Question</h3>
+					<p>无论你是考生还是家长，你的疑问都可以发布在这里。我们将有专业的特聘专家和热心的兼职大学生携诚为你解答，直到你满意为止。同时，还有丰富的标签帮你精准定位问题。</p>
 					<div class="icon1">
 						<a href="question.html"><i class="icon2"></i></a>
 					</div>
 				</div>
 				<div class="secvice-top-grid-3">
-					<h3>Mirum est notare</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+					<h3>Live</h3>
+					<p>全方位面对面真实互动，数十位兼职大学生通过直播的方式让你领略高校风采，让你对高校的认识更有立体感。定期还会有我们的专家直播与进行大家面对面交流、互动。</p>
 					<div class="icon1">
-						<a href="#"><i class="icon3"></i></a>
+						<a href="live.html"><i class="icon3"></i></a>
 					</div>
 				</div>
 				<div class="secvice-top-grid-4">
-					<h3>Mirum est notare</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+					<h3>Visit</h3>
+					<p>如果你觉得文字信息太苍白，直播互动太遥远。那么你一定不能错过我们为你安排的精品大学游。在这里，你将跟着我们的专业导游深入了解大学氛围。放松的同时获得了信息。</p>
 					<div class="icon1">
-						<a href="#"><i class="icon4"></i></a>
+						<a href="gallery.html"><i class="icon4"></i></a>
 					</div>
 				</div>
 				<div class="clearfix"></div>
@@ -280,24 +330,24 @@
           <!-- 轮播（Carousel）项目 -->
           <div class="carousel-inner">
             <div class="item active" >
-              <img src="images/carsoucel1.png" alt="First slide">
+              <img src="images/lunbo1.jpg" alt="First slide">
               <div class="carousel-caption">
-                标题 1
-                <p>This is a picture description.</p>
+                #精品大学游#
+                <p>东华大学校园游火热报名中！</p>
               </div>
             </div>
             <div class="item">
-              <img src="images/carsoucel1.png" alt="Second slide">
+              <img src="images/lunbo2.jpg" alt="Second slide">
               <div class="carousel-caption">
-				  标题 2
-				  <p>This is a picture description.</p>
+				  #信息大本营#
+				  <p>独家揭秘：我是怎样考上北大的。</p>
 			  </div>
             </div>
             <div class="item">
-              <img src="images/carsoucel1.png" alt="Third slide">
+              <img src="images/lunbo3.jpg" alt="Third slide">
               <div class="carousel-caption">
-				标题 3
-				<p>This is a picture description.</p>
+				#答疑解惑区#
+				<p>填志愿，是先选大学，还是先选专业？</p>
 			  </div>
             </div>
           </div>
@@ -321,43 +371,44 @@
 		<div class="container">
 			<div class="news-text">
 				<h3>高校展示</h3>
-				<h5>Cras porttitor imperdiet volutpat nulla malesuada lectus eros <span>ut convallis felis consectetur ut </span></h5>
+				<h5>Universities Show</h5>
 			</div>
 			<div class="news-grids">
 				<div class="col-md-3 news-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-					<a href="single.html">东华大学</a>
+					<a href="single.html">复旦大学</a>
 					<span>8.00 - 10.00 | JUN 09,2014</span>
-					<a class="mask" href="single.html"><img src="images/img1.jpg" class="img-responsive zoom-img" alt="" /></a>
+					<a class="mask" href="gallery.html"><img src="images/img1.jpg" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
-						<p>Pellentesque ut urna eu mauris scele risque auctor volutpat et massa pers piciis iste natus scele risque auctor volutpat et massa.</p>
-						<a class="button" href="single.html"><img src="images/read.png" alt=""></a>
+						<p>复旦大学（Fudan University），位于首批沿海开放城市上海市，由中华人民共和国教育部直属，中央直管副部级建制，位列“211工程”、“985工程”，入选“珠峰计划”、“111计划”、“2011计划”、“卓越医生教育培养计划”，为“九校联盟”成员、东亚研究型大学协会成员、环太平洋大学协会成员、21世纪大学协会成员，是一所综合性研究型的全国重点大学。</p>
+						<a class="button" href="gallery.html"><img src="images/read.png" alt=""></a>
 					</div>
 				</div>
 				<div class="col-md-3 news-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-					<a href="single.html">东华大学</a>
+					<a href="single.html">上海交通大学</a>
 					<span>10.00 - 12.00 | SEP 24,2014</span>
-					<a class="mask" href="single.html"><img src="images/img2.jpg" class="img-responsive zoom-img" alt="" /></a>
+					<a class="mask" href="gallery.html"><img src="images/img2.jpg" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
-						<p>Pellentesque ut urna eu mauris scele risque auctor volutpat et massa pers piciis iste natus scele risque auctor volutpat et massa.</p>
-						<a class="button" href="single.html"><img src="images/read.png" alt=""></a>
+						<p>上海交通大学（Shanghai Jiao Tong University）位于中国的经济、金融中心上海，教育部直属，具有理工特色，涵盖理、工、医、经、管、文、法等9大学科门类的综合性全国重点大学，中国首批七所“211工程”、首批九所“985工程重点建设”院校之一，入选“珠峰计划”、“111计划”、“2011计划”、“卓越医生教育培养计划”、“卓越法律人才教育培养计划”。</p>
+						<a class="button" href="gallery.html"><img src="images/read.png" alt=""></a>
 					</div>
 				</div>
 				<div class="col-md-3 news-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-					<a href="single.html">东华大学</a>
+					<a href="gallery.html">同济大学</a>
 					<span>9.00 - 10.00 | FEB 15,2014</span>
 					<a class="mask" href="single.html"><img src="images/img3.jpg" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
-						<p>Pellentesque ut urna eu mauris scele risque auctor volutpat et massa pers piciis iste natus scele risque auctor volutpat et massa.</p>
-						<a class="button" href="single.html"><img src="images/read.png" alt=""></a>
+						<p>同济大学（Tongji University），简称同济，是中华人民共和国教育部直属 的全国重点大学，是历史悠久、享有盛誉的中国著名高等学府，是国家“211工程”、“985工程”重点建设高校，也是收生标准最严格的中国大学之一；是“2011计划”、“珠峰计划”、“卓越工程师计划”、卓越法律人才教育培养计划、卓越医生教育培养计划、“111计划”、中美“10+10”计划入选高校。</p>
+						<a class="button" href="gallery.html"><img src="images/read.png" alt=""></a>
 					</div>
 				</div>
 				<div class="col-md-3 news-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 					<a href="single.html">东华大学</a>
 					<span>11.00 - 10.00 | JUN 10,2014</span>
-					<a class="mask" href="single.html"><img src="images/img4.jpg" class="img-responsive zoom-img" alt="" /></a>
+					<a class="mask" href="gallery.html"><img src="images/img4.jpg" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
-						<p>Pellentesque ut urna eu mauris scele risque auctor volutpat et massa pers piciis iste natus scele risque auctor volutpat et massa.</p>
-						<a class="button" href="single.html"><img src="images/read.png" alt=""></a>
+						<p>东华大学（Donghua University）地处国际化大都市上海，是教育部直属全国重点大学，国家“211工程”和“卓越工程师教育培养计划”重点建设的大学，是高水平行业特色大学优质资源共享联盟成员高校。是中国首批具有博士、硕士、学士三级学位授予权的大学之一。学校创建于1951年，时名华东纺织工学院，1985年更名为中国纺织大学，1999年更名为东华大学。
+</p>
+						<a class="button" href="gallery.html"><img src="images/read.png" alt=""></a>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
@@ -372,7 +423,8 @@
 					<h3>这是LOGO</h3>
 				</div>
 				<div class="col-md-6 address">
-					<h3>这是介绍。。。</h3>
+					<h3>——<a href="index.html" style="color:white">Tip&amp;Trip(大学咨游网)</a><br/>全力打造高考考生择校咨询平台，<br/>&nbsp&nbsp独创线上线下一体化互动咨询，<br/>&nbsp&nbsp&nbsp&nbsp让你自由择校不是梦！</h3>
+					<p>联系地址：上海市&nbsp长宁区&nbsp延安西路1882号&nbsp东华大学</p>
 				</div>
 				<div class="col-md-3 dal">
 					<h3>这是二维码</h3>
