--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 			</div>
 		</div>
 	</div>
+	</div>
 	<!-- header-section-ends -->
 	<!--signin-->
 	<div class="theme-popover">
@@ -377,7 +378,7 @@
 				<div class="col-md-3 news-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 					<a href="single.html">复旦大学</a>
 					<span>8.00 - 10.00 | JUN 09,2014</span>
-					<a class="mask" href="gallery.html"><img src="images/img1.jpg" class="img-responsive zoom-img" alt="" /></a>
+					<a class="mask" href="gallery.html"><img src="images/fudan.jpg" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
 						<p>复旦大学（Fudan University），位于首批沿海开放城市上海市，由中华人民共和国教育部直属，中央直管副部级建制，位列“211工程”、“985工程”，入选“珠峰计划”、“111计划”、“2011计划”、“卓越医生教育培养计划”，为“九校联盟”成员、东亚研究型大学协会成员、环太平洋大学协会成员、21世纪大学协会成员，是一所综合性研究型的全国重点大学。</p>
 						<a class="button" href="gallery.html"><img src="images/read.png" alt=""></a>
@@ -386,7 +387,7 @@
 				<div class="col-md-3 news-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 					<a href="single.html">上海交通大学</a>
 					<span>10.00 - 12.00 | SEP 24,2014</span>
-					<a class="mask" href="gallery.html"><img src="images/img2.jpg" class="img-responsive zoom-img" alt="" /></a>
+					<a class="mask" href="gallery.html"><img src="images/jiaoda.jpg" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
 						<p>上海交通大学（Shanghai Jiao Tong University）位于中国的经济、金融中心上海，教育部直属，具有理工特色，涵盖理、工、医、经、管、文、法等9大学科门类的综合性全国重点大学，中国首批七所“211工程”、首批九所“985工程重点建设”院校之一，入选“珠峰计划”、“111计划”、“2011计划”、“卓越医生教育培养计划”、“卓越法律人才教育培养计划”。</p>
 						<a class="button" href="gallery.html"><img src="images/read.png" alt=""></a>
@@ -395,16 +396,16 @@
 				<div class="col-md-3 news-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 					<a href="gallery.html">同济大学</a>
 					<span>9.00 - 10.00 | FEB 15,2014</span>
-					<a class="mask" href="single.html"><img src="images/img3.jpg" class="img-responsive zoom-img" alt="" /></a>
+					<a class="mask" href="single.html"><img src="images/tongji.jpg" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
-						<p>同济大学（Tongji University），简称同济，是中华人民共和国教育部直属 的全国重点大学，是历史悠久、享有盛誉的中国著名高等学府，是国家“211工程”、“985工程”重点建设高校，也是收生标准最严格的中国大学之一；是“2011计划”、“珠峰计划”、“卓越工程师计划”、卓越法律人才教育培养计划、卓越医生教育培养计划、“111计划”、中美“10+10”计划入选高校。</p>
+						<p>同济大学（Tongji University），简称同济，是中华人民共和国教育部直属的全国重点大学，是历史悠久、享有盛誉的中国著名高等学府，是国家“211工程”、“985工程”重点建设高校，也是收生标准最严格的中国大学之一；是“2011计划”、“珠峰计划”、“卓越工程师计划”、卓越法律人才教育培养计划、卓越医生教育培养计划、“111计划”、中美“10+10”计划入选高校。</p>
 						<a class="button" href="gallery.html"><img src="images/read.png" alt=""></a>
 					</div>
 				</div>
 				<div class="col-md-3 news-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 					<a href="single.html">东华大学</a>
 					<span>11.00 - 10.00 | JUN 10,2014</span>
-					<a class="mask" href="gallery.html"><img src="images/img4.jpg" class="img-responsive zoom-img" alt="" /></a>
+					<a class="mask" href="gallery.html"><img src="images/donghua.jpg" class="img-responsive zoom-img" alt="" /></a>
 					<div class="news-info">
 						<p>东华大学（Donghua University）地处国际化大都市上海，是教育部直属全国重点大学，国家“211工程”和“卓越工程师教育培养计划”重点建设的大学，是高水平行业特色大学优质资源共享联盟成员高校。是中国首批具有博士、硕士、学士三级学位授予权的大学之一。学校创建于1951年，时名华东纺织工学院，1985年更名为中国纺织大学，1999年更名为东华大学。
 </p>
@@ -417,21 +418,96 @@
 	</div>
 	<!-- //news -->
 	<!-- content-section-ends -->
-	<div class="get-in-touch">
-			<div class="container">
-				<div class="col-md-3 gin">
-					<h3>这是LOGO</h3>
-				</div>
-				<div class="col-md-6 address">
-					<h3>——<a href="index.html" style="color:white">Tip&amp;Trip(大学咨游网)</a><br/>全力打造高考考生择校咨询平台，<br/>&nbsp&nbsp独创线上线下一体化互动咨询，<br/>&nbsp&nbsp&nbsp&nbsp让你自由择校不是梦！</h3>
-					<p>联系地址：上海市&nbsp长宁区&nbsp延安西路1882号&nbsp东华大学</p>
-				</div>
-				<div class="col-md-3 dal">
-					<h3>这是二维码</h3>
-				</div>
-				<div class="clearfix"></div>
+	<div id="footer">
+		<div id="footer-bg" class="hidden-xs">
+		<div id="footer-inner">
+		<div class="inner-block first">
+			<h3>关于我们</h3>
+			<div class="inner-con">
+			大学咨游网（Tip&amp;Trip）是一个专业的高校信息交流平台，立足于高考考生对上海高校信息的需求，旨在为大学生和高考考生提供报备与机会，是高考考生和大学生间自由交流的一座桥梁。坚持将最全面、真实、有效的高校信息提供给用户。
 			</div>
 		</div>
+		<div class="inner-block">
+			<h3>我们的团队</h3>
+			<div class="inner-con designer-recom">
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p1.jpg">
+				</a>
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p2.jpg">
+				</a>
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p3.jpg">
+				</a>
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p4.jpg">
+				</a>
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p5.jpg">
+				</a>
+			</div>
+		</div>
+		<div class="inner-block">
+			<h3>站内通道</h3>
+			<ul class="wp-tag-cloud">
+				<li>
+					<a href="about.html">关于我们</a>
+				</li>
+				<li>
+					<a href="#">信息大本营</a>
+				</li>
+				<li>
+					<a href="question.html">答疑解惑区</a>
+				</li>
+				<li>
+					<a href="live.html">高校直播间</a>
+				</li>
+				<li>
+					<a href="gallery.html">精品大学游</a>
+				</li>
+			</ul>
+		</div>
+		<div class="inner-block last">
+			<h3>我们的微信</h3>
+			<div class="inner-con">
+				<div class="weixinma">
+					<img src="images/erweima.jpg" alt="二维码">
+					<p>扫码关注，更多惊喜！</p>
+				</div>
+			</div>
+		</div>
+		</div>
+		</div>
+	<div id="footer-bottom" style="padding:0">
+		<div id="footer-inner">
+			<div class="nav-foot">
+			<p class="footer-links">
+				<a href="#" rel="nofollow">广告合作</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#" rel="nofollow">免责声明</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#" rel="nofollow">友情链接</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#" rel="nofollow">联系我们</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="about.html" rel="nofollow">关于我们</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#" rel="nofollow">@TipTrip</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</p>
+			<p class="credit">
+				Copyright © 2016
+				<strong>
+					<a class="site-link" href="#" title="大学咨游网-Tip&Trip" rel="home">
+					<span>大学咨游网-Tip&amp;Trip</span>
+					</a>
+				</strong>
+				- 微信公众号：TipTrip
+			</p>
+			</div>
+		</div>
+	</div>
+	</div>
 	<!-- footer-section -->
 	<!-- footer-section -->
 	<script type="text/javascript">
