--- a/question.html
+++ b/question.html
@@ -307,20 +307,96 @@
 	 </div>
 	 </div>
 	<!-- footer-section -->
-	<div class="get-in-touch">
-			<div class="container">
-				<div class="col-md-3 gin">
-					<h3>这是LOGO</h3>
-				</div>
-				<div class="col-md-6 address">
-					<h3>这是介绍。。。</h3>
-				</div>
-				<div class="col-md-3 dal">
-					<h3>这是二维码</h3>
-				</div>
-				<div class="clearfix"></div>
+	<div id="footer">
+		<div id="footer-bg" class="hidden-xs">
+		<div id="footer-inner">
+		<div class="inner-block first">
+			<h3>关于我们</h3>
+			<div class="inner-con">
+			大学咨游网（Tip&amp;Trip）是一个专业的高校信息交流平台，立足于高考考生对上海高校信息的需求，旨在为大学生和高考考生提供报备与机会，是高考考生和大学生间自由交流的一座桥梁。坚持将最全面、真实、有效的高校信息提供给用户。
 			</div>
 		</div>
+		<div class="inner-block">
+			<h3>我们的团队</h3>
+			<div class="inner-con designer-recom">
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p1.jpg">
+				</a>
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p2.jpg">
+				</a>
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p3.jpg">
+				</a>
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p4.jpg">
+				</a>
+				<a href="#" target="_blank" rel="nofollow">
+					<img src="images/p5.jpg">
+				</a>
+			</div>
+		</div>
+		<div class="inner-block">
+			<h3>站内通道</h3>
+			<ul class="wp-tag-cloud">
+				<li>
+					<a href="about.html">关于我们</a>
+				</li>
+				<li>
+					<a href="#">信息大本营</a>
+				</li>
+				<li>
+					<a href="question.html">答疑解惑区</a>
+				</li>
+				<li>
+					<a href="live.html">高校直播间</a>
+				</li>
+				<li>
+					<a href="gallery.html">精品大学游</a>
+				</li>
+			</ul>
+		</div>
+		<div class="inner-block last">
+			<h3>我们的微信</h3>
+			<div class="inner-con">
+				<div class="weixinma">
+					<img src="images/erweima.jpg" alt="二维码">
+					<p>扫码关注，更多惊喜！</p>
+				</div>
+			</div>
+		</div>
+		</div>
+		</div>
+	<div id="footer-bottom" style="padding:0">
+		<div id="footer-inner">
+			<div class="nav-foot">
+			<p class="footer-links">
+				<a href="#" rel="nofollow">广告合作</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#" rel="nofollow">免责声明</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#" rel="nofollow">友情链接</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#" rel="nofollow">联系我们</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="about.html" rel="nofollow">关于我们</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#" rel="nofollow">@TipTrip</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</p>
+			<p class="credit">
+				Copyright © 2016
+				<strong>
+					<a class="site-link" href="#" title="大学咨游网-Tip&Trip" rel="home">
+					<span>大学咨游网-Tip&amp;Trip</span>
+					</a>
+				</strong>
+				- 微信公众号：TipTrip
+			</p>
+			</div>
+		</div>
+	</div>
+	</div>
 	<!-- footer-section -->
 	<script type="text/javascript">
 		$(document).ready(function() {
