--- a/question.html
+++ b/question.html
@@ -18,6 +18,8 @@
 <link href='http://fonts.useso.com/css?family=Niconne' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
+<!-- Custom Fonts -->
+    <link rel="stylesheet" href="css/font-awesome.min.css"  type="text/css">
 <!--/script-->
 <script type="text/javascript">
 			jQuery(document).ready(function($) {
@@ -200,7 +202,7 @@
 						<span class="like-count">66</span>
 					</div><!-- end of post meta -->
 				</header>
-				<p>今年高三，还有九天高考，可是近几次模考都是一本线下十几分，每一次都是有一科不理想，每一次不理想的科目还都不是同一科。真的挺担心因为中考的时候是模拟考不理想中考也不理想，担心高考。我想去一个一本学校读广告，可是我怎么觉得这个梦想这么难实现了呢。最后9天了非常的没动力，有一种快到头了的感觉，接下来就是适应性考试，接着自习然后就高考了。我不是想来问问有没有希望之类的没有用的话，我只是想要一个坚持下去的理由。最后九天，我该做些什么. . . <a class="readmore-link" href="http://knowledgebase.inspirythemes.com/integrating-wordpress-with-your-website/">Read more</a></p>
+				<p>今年高三，还有九天高考，可是近几次模考都是一本线下十几分，每一次都是有一科不理想，每一次不理想的科目还都不是同一科。真的挺担心因为中考的时候是模拟考不理想中考也不理想，担心高考。我想去一个一本学校读广告，可是我怎么觉得这个梦想这么难实现了呢。最后9天了非常的没动力，有一种快到头了的感觉，接下来就是适应性考试，接着自习然后就高考了。我不是想来问问有没有希望之类的没有用的话，我只是想要一个坚持下去的理由。最后九天，我该做些什么. . . <a class="readmore-link" href="#"><span class="label label-default">Read more</span></a></p>
 			</article>
 			<article class="format-standard type-post hentry clearfix">
 				<header class="clearfix">
@@ -214,7 +216,7 @@
 						<span class="like-count">66</span>
 					</div><!-- end of post meta -->
 				</header>
-				<p>我理综特别差，导致每次都离一本线差一点点，语数英还好，然后如果高考只是刚刚上一本线到最后是不是还是要去读二本学校. . . <a class="readmore-link" href="http://knowledgebase.inspirythemes.com/integrating-wordpress-with-your-website/">Read more</a></p>
+				<p>我理综特别差，导致每次都离一本线差一点点，语数英还好，然后如果高考只是刚刚上一本线到最后是不是还是要去读二本学校. . . <a class="readmore-link" href="#"><span class="label label-default">Read more</span></p>
 			</article>
 			<article class="format-standard type-post hentry clearfix">
 				<header class="clearfix">
@@ -228,7 +230,7 @@
 						<span class="like-count">66</span>
 					</div><!-- end of post meta -->
 				</header>
-				<p>今年高三，还有九天高考，可是近几次模考都是一本线下十几分，每一次都是有一科不理想，每一次不理想的科目还都不是同一科。真的挺担心因为中考的时候是模拟考不理想中考也不理想，担心高考。我想去一个一本学校读广告，可是我怎么觉得这个梦想这么难实现了呢。最后9天了非常的没动力，有一种快到头了的感觉，接下来就是适应性考试，接着自习然后就高考了。我不是想来问问有没有希望之类的没有用的话，我只是想要一个坚持下去的理由。最后九天，我该做些什么. . . <a class="readmore-link" href="http://knowledgebase.inspirythemes.com/integrating-wordpress-with-your-website/">Read more</a></p>
+				<p>今年高三，还有九天高考，可是近几次模考都是一本线下十几分，每一次都是有一科不理想，每一次不理想的科目还都不是同一科。真的挺担心因为中考的时候是模拟考不理想中考也不理想，担心高考。我想去一个一本学校读广告，可是我怎么觉得这个梦想这么难实现了呢。最后9天了非常的没动力，有一种快到头了的感觉，接下来就是适应性考试，接着自习然后就高考了。我不是想来问问有没有希望之类的没有用的话，我只是想要一个坚持下去的理由。最后九天，我该做些什么. . . <a class="readmore-link" href="#"><span class="label label-default">Read more</span></p>
 			</article>
 			<article class="format-standard type-post hentry clearfix">
 				<header class="clearfix">
@@ -242,7 +244,7 @@
 						<span class="like-count">66</span>
 					</div><!-- end of post meta -->
 				</header>
-				<p>我理综特别差，导致每次都离一本线差一点点，语数英还好，然后如果高考只是刚刚上一本线到最后是不是还是要去读二本学校. . . <a class="readmore-link" href="http://knowledgebase.inspirythemes.com/integrating-wordpress-with-your-website/">Read more</a></p>
+				<p>我理综特别差，导致每次都离一本线差一点点，语数英还好，然后如果高考只是刚刚上一本线到最后是不是还是要去读二本学校. . . <a class="readmore-link" href="#"><span class="label label-default">Read more</span></a></p>
 			</article>
 			<article class=" type-post format-image hentry clearfix">
 				<header class="clearfix">
@@ -257,7 +259,7 @@
 				</div><!-- end of post meta -->
 				</header>
 				<a href="#" title="Using Images"><img src="images/living-room-770x501.jpg" class="attachment-std-thumbnail wp-post-image" alt="Living room"></a>
-				<p>考试做题会感觉很空……看着题目很慌乱，原本做一遍就会的题目要做上很多遍，写字都不利索，但是内心没有想很多。是熬了夜的原因吗？请问楼楼高考心态怎么调整呢。进考场前还要做做题找有点感觉不？现在520，高考有希望540么. . . <a class="readmore-link" href="http://knowledgebase.inspirythemes.com/using-images/">Read more</a></p>
+				<p>考试做题会感觉很空……看着题目很慌乱，原本做一遍就会的题目要做上很多遍，写字都不利索，但是内心没有想很多。是熬了夜的原因吗？请问楼楼高考心态怎么调整呢。进考场前还要做做题找有点感觉不？现在520，高考有希望540么. . . <a class="readmore-link" href="#"><span class="label label-default">Read more</span></a></p>
 			</article>
 			<ul class="pagination">
 				<li><a href="#">&laquo;</a></li>
@@ -273,7 +275,20 @@
 					<hr style="margin-top:0px; height:1px;border:none;border-top:1px solid #BBBBBB;">
 					<form role="form">
 						<div class="form-group">
-							<input type="text"placeholder="请输入问题" required>
+							<input type="text" placeholder="请输入问题" required>
+						</div>
+						<div class="form-group">
+							<select>
+								 <option>填报志愿</option>
+								 <option>考前咨询</option>
+								 <option>快速提分</option>
+								 <option>心理疏导</option>
+								 <option>大学生活</option>
+								 <option>上海高校</option>
+								 <option>未来规划</option>
+							</select>
+							<input type="text" placeholder="请输入悬赏金额" onkeyup="this.value=this.value.replace(/\D/g,'')"
+    onafterpaste="this.value=this.value.replace(/\D/g,'')" style="width:40%;float:left;">
 						</div>
 						<div class="form-group">
 							<textarea type="text"  placeholder="请输入问题的详细描述..." required></textarea>
@@ -285,7 +300,7 @@
 				</div>
 		</div>
 		<div class="col-md-4 col-sm-4 col-lg-3">
-		<section class="widget"><h3 class="title">分类</h3>
+		<section class="widget"><h3 class="title"><i class="fa fa-tags"></i>&nbsp;分类</h3>
 			<ul>
 				<li><a href="#" title="Lorem ipsum dolor sit amet," class="list-group-item">填报志愿</a> </li>
 				<li><a href="#" title="Lorem ipsum dolor sit amet," class="list-group-item">考前咨询</a></li>
@@ -298,7 +313,7 @@
 		</section>
 		<section class="widget">
             <div class="support-widget">
-                <h3 class="title">帮助</h3><br/>
+                <h3 class="title"><i class="fa fa-question-circle"></i>&nbsp;帮助</h3><br/>
                 <p class="intro">仍需要帮助？如果你还是没有解决问题，你可以联系我们获得进一步的帮助。</p>
             </div>
         </section>
@@ -370,20 +385,30 @@
 	<div id="footer-bottom" style="padding:0">
 		<div id="footer-inner">
 			<div class="nav-foot">
-			<p class="footer-links">
-				<a href="#" rel="nofollow">广告合作</a>
+			<ul class="footer-links dropdown">
+				<li><a href="#" rel="nofollow">广告合作</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">免责声明</a>
+				<li><a href="#" rel="nofollow">免责声明</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">友情链接</a>
+				<li><a href="#" rel="nofollow" data-toggle="dropdown">友情链接</a>
+				<ul class="dropdown-menu footer-yqlinks" role="menu" aria-labelledby="dLabel">
+					<li><a href="http://www.sjtu.edu.cn/" target="_blank">上海交通大学</a></li>
+					<li><a href="http://www.fudan.edu.cn/" target="_blank">复旦大学</a></li>
+					<li><a href="http://www.tongji.edu.cn/" target="_blank">同济大学</a></li>
+					<li><a href="http://www.ecnu.edu.cn/" target="_blank">华东师范大学</a></li>
+					<li><a href="http://www.dhu.edu.cn/" target="_blank">东华大学</a></li>
+					<li><a href="http://www.ecust.edu.cn/" target="_blank">华东理工大学</a></li>
+					<li><a href="http://www.shu.edu.cn/" target="_blank">上海大学</a></li>
+					<li><a href="http://www.lixin.edu.cn/" target="_blank">上海立信会计学院</a></li>
+				</ul></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">联系我们</a>
+				<li><a href="#" rel="nofollow">联系我们</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="about.html" rel="nofollow">关于我们</a>
+				<li><a href="about.html" rel="nofollow">关于我们</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">@TipTrip</a>
+				<li><a href="#" rel="nofollow">@TipTrip</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			</p>
+			</ul>
 			<p class="credit">
 				Copyright © 2016
 				<strong>
