--- a/index.html
+++ b/index.html
@@ -90,60 +90,11 @@
 			</div>
 			<div class="clearfix"></div>
 			<div class="banner-info text-center">
-			<canvas class="canvas1"></canvas>
-			<div class="help" style="display:none">?</div> 
-
-			<div class="ui" style="display:none">
-			  <input class="ui-input" type="text" />
-			  <span class="ui-return">↵</span>
-			</div>
-
-<div class="overlay" style="display:none">
-  <div class="tabs">
-    <div class="tabs-labels"><span class="tabs-label">Commands</span><span class="tabs-label">Info</span><span class="tabs-label">Share</span></div>
-
-    <div class="tabs-panels">
-      <ul class="tabs-panel commands">
-        <li class="commands-item"><span class="commands-item-title">Text</span><span class="commands-item-info" data-demo="Hello :)">Type anything</span><span class="commands-item-action">Demo</span></li>
-        <li class="commands-item"><span class="commands-item-title">Countdown</span><span class="commands-item-info" data-demo="#countdown 10">#countdown<span class="commands-item-mode">number</span></span><span class="commands-item-action">Demo</span></li>
-        <li class="commands-item"><span class="commands-item-title">Time</span><span class="commands-item-info" data-demo="#time">#time</span><span class="commands-item-action">Demo</span></li>
-        <li class="commands-item"><span class="commands-item-title">Rectangle</span><span class="commands-item-info" data-demo="#rectangle 30x15">#rectangle<span class="commands-item-mode">width x height</span></span><span class="commands-item-action">Demo</span></li>
-        <li class="commands-item"><span class="commands-item-title">Circle</span><span class="commands-item-info" data-demo="#circle 25">#circle<span class="commands-item-mode">diameter</span></span><span class="commands-item-action">Demo</span></li>
-
-        <li class="commands-item commands-item--gap"><span class="commands-item-title">Animate</span><span class="commands-item-info" data-demo="The time is|#time|#countdown 3|#icon thumbs-up"><span class="commands-item-mode">command1</span>&nbsp;|<span class="commands-item-mode">command2</span></span><span class="commands-item-action">Demo</span></li>
-      </ul>
-
-      <div class="tabs-panel ui-details">
-        <div class="ui-details-content">
-          <h1>Shape Shifter</h1>
-          <p>
-            An experiment by <a href="//www.kennethcachia.com" target="_blank">Kenneth Cachia<a/>.<br/>
-            <a href="//fortawesome.github.io/Font-Awesome/#icons-new" target="_blank">Font Awesome</a> is being used to render all #icons.
-          </p>
-
-          <br/><p>Visit <a href="http://www.kennethcachia.com/shape-shifter/?a=#icon thumbs-up" target="_blank">Shape Shifter</a> to use icons.</p>
-        </div>
-      </div>
-
-      <div class="tabs-panel ui-share">
-        <div class="ui-share-content">
-          <h1>Sharing</h1>
-          <p>Simply add <em>?a=</em> to the current URL to share any static or animated text. Examples:</p>
-          <p>
-            <a href="http://www.kennethcachia.com/shape-shifter?a=Hello" target="_blank">www.kennethcachia.com/shape-shifter?a=Hello</a><br/>
-            <a href="http://www.kennethcachia.com/shape-shifter?a=Hello|#countdown 3" target="_blank">www.kennethcachia.com/shape-shifter?a=Hello|#countdown 3</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  <script src="js/index.js"></script>
+				<h1><a href="#">大学咨游网<br/>Tip&nbsp;&amp;&nbsp;Trip</a></h1>
 			</div>
 			<div class="header-bottom-grids text-center">
 				<div class="header-bottom-grid1" onclick="window.location.href='#';return false">
-					<span class="glyphicon glyphicon-user"></span>					
-					<h4>信息大本<br/>营</h4>
+					<span class="glyphicon glyphicon-user"></span>				<h4>信息大本<br/>营</h4>
 				</div>
 				<div class="header-bottom-grid2" onclick="window.location.href='question.html';return false">
 					<span class="glyphicon glyphicon-hand-up"></span>
@@ -481,20 +432,30 @@
 	<div id="footer-bottom" style="padding:0">
 		<div id="footer-inner">
 			<div class="nav-foot">
-			<p class="footer-links">
-				<a href="#" rel="nofollow">广告合作</a>
+			<ul class="footer-links dropdown">
+				<li><a href="#" rel="nofollow">广告合作</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">免责声明</a>
+				<li><a href="#" rel="nofollow">免责声明</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">友情链接</a>
+				<li><a href="#" rel="nofollow" data-toggle="dropdown">友情链接</a>
+				<ul class="dropdown-menu footer-yqlinks" role="menu" aria-labelledby="dLabel">
+					<li><a href="http://www.sjtu.edu.cn/" target="_blank">上海交通大学</a></li>
+					<li><a href="http://www.fudan.edu.cn/" target="_blank">复旦大学</a></li>
+					<li><a href="http://www.tongji.edu.cn/" target="_blank">同济大学</a></li>
+					<li><a href="http://www.ecnu.edu.cn/" target="_blank">华东师范大学</a></li>
+					<li><a href="http://www.dhu.edu.cn/" target="_blank">东华大学</a></li>
+					<li><a href="http://www.ecust.edu.cn/" target="_blank">华东理工大学</a></li>
+					<li><a href="http://www.shu.edu.cn/" target="_blank">上海大学</a></li>
+					<li><a href="http://www.lixin.edu.cn/" target="_blank">上海立信会计学院</a></li>
+				</ul></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">联系我们</a>
+				<li><a href="#" rel="nofollow">联系我们</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="about.html" rel="nofollow">关于我们</a>
+				<li><a href="about.html" rel="nofollow">关于我们</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">@TipTrip</a>
+				<li><a href="#" rel="nofollow">@TipTrip</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			</p>
+			</ul>
 			<p class="credit">
 				Copyright © 2016
 				<strong>
