--- a/person.html
+++ b/person.html
@@ -298,20 +298,30 @@
 	<div id="footer-bottom" style="padding:0">
 		<div id="footer-inner">
 			<div class="nav-foot">
-			<p class="footer-links">
-				<a href="#" rel="nofollow">广告合作</a>
+			<ul class="footer-links dropdown">
+				<li><a href="#" rel="nofollow">广告合作</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">免责声明</a>
+				<li><a href="#" rel="nofollow">免责声明</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">友情链接</a>
+				<li><a href="#" rel="nofollow" data-toggle="dropdown">友情链接</a>
+				<ul class="dropdown-menu footer-yqlinks" role="menu" aria-labelledby="dLabel">
+					<li><a href="http://www.sjtu.edu.cn/" target="_blank">上海交通大学</a></li>
+					<li><a href="http://www.fudan.edu.cn/" target="_blank">复旦大学</a></li>
+					<li><a href="http://www.tongji.edu.cn/" target="_blank">同济大学</a></li>
+					<li><a href="http://www.ecnu.edu.cn/" target="_blank">华东师范大学</a></li>
+					<li><a href="http://www.dhu.edu.cn/" target="_blank">东华大学</a></li>
+					<li><a href="http://www.ecust.edu.cn/" target="_blank">华东理工大学</a></li>
+					<li><a href="http://www.shu.edu.cn/" target="_blank">上海大学</a></li>
+					<li><a href="http://www.lixin.edu.cn/" target="_blank">上海立信会计学院</a></li>
+				</ul></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">联系我们</a>
+				<li><a href="#" rel="nofollow">联系我们</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="about.html" rel="nofollow">关于我们</a>
+				<li><a href="about.html" rel="nofollow">关于我们</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="#" rel="nofollow">@TipTrip</a>
+				<li><a href="#" rel="nofollow">@TipTrip</a></li>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			</p>
+			</ul>
 			<p class="credit">
 				Copyright © 2016
 				<strong>
